# klydo-mcp

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .pypirc.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  QUICK_START_GUIDE.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  publish.yaml  publish.yml
notebooks/: klydo_scraper_debug.ipynb
scripts/: publish.sh  test_real_api.py
src/klydo/: __init__.py  config.py  logging.py  server.py
src/klydo/models/: __init__.py  product.py
src/klydo/scrapers/: __init__.py  base.py  cache.py  klydo_store.py  myntra.py
tests/: __init__.py  conftest.py  test_models.py  test_scrapers.py
