[project]
name = "klydo-mcp"
version = "0.1.4"
description = "Fashion discovery MCP server for Indian Gen Z - by Klydo"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shravan", email = "shravan@klydo.in"},
]
keywords = [
    "mcp",
    "fashion",
    "e-commerce",
    "ai",
    "claude",
    "shopping",
    "india",
    "gen-z",
    "klydo",
    "bangalore"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "selectolax>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/myselfshravan/klydo-mcp"
Repository = "https://github.com/myselfshravan/klydo-mcp"
Issues = "https://github.com/myselfshravan/klydo-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
klydo = "klydo.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klydo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
